<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_list"
    android:orientation="vertical" >

    <include layout="@layout/layout_title"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/tucao_all_list_text"
                    android:text="@string/animation" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_animation_mad"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mad" />

                        <Button
                            android:id="@+id/btn_animation_mmd"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mmd" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_animation_zonghe"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/zonghe" />
                        <Button
                            android:id="@+id/btn_animation_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/animation_1"
                            android:textColor="#ff00ff" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/tucao_all_list_text"
                    android:text="@string/music" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_music_mucis_2"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/music_2" />

                        <Button
                            android:id="@+id/btn_music_vocaloid"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/vocaloid" />
                        
                        <Button
                            android:id="@+id/btn_music_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/music_1"
                            android:textColor="#ff00ff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_music_fanchang"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fanchang" />
                        
                        <Button
                            android:id="@+id/btn_music_yanzou"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/yanzou" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/tucao_all_list_text"
                    android:text="@string/game" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_game_yingxiang"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/yingxiang" />
                        <Button
                            android:id="@+id/btn_game_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/game_1"
                            android:textColor="#ff00ff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_game_jieshuo"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/jieshuo" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/tucao_all_list_text"
                    android:text="@string/sanciyuan" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_sanciyuan_xiwenlejian"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/xiwenlejian" />

                        <Button
                            android:id="@+id/btn_sanciyuan_yuleguichu"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/yuleguichu" />
                        <Button
                            android:id="@+id/btn_sanciyuan_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sanciyuan_1"
                            android:textColor="#ff00ff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_sanciyuan_wudao"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wudao" />

                        <Button
                            android:id="@+id/btn_sanciyuan_kexue"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kexue" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/tucao_all_list_text"
                    android:text="@string/heji" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_heji_donghua"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/donghua" />
                        <Button
                            android:id="@+id/btn_heji_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/heji_1"
                            android:textColor="#ff00ff" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_heji_juchang"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/juchang" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    style="@style/tucao_all_list_text"
                    android:text="@string/xinfan" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_xinfan_xinfanlianzai"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/xinfanlianzai" />

                        <Button
                            android:id="@+id/btn_xinfan_newsanciyuan"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/newsanciyuan" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical" >

                        <Button
                            android:id="@+id/btn_xinfan_zhongpeidonghua"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/zhongpeidonghua" />
                        <Button
                            android:id="@+id/btn_xinfan_1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/xinfan_1"
                            android:textColor="#ff00ff" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>