<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_list"
    android:orientation="vertical" >

    <!-- 内容 -->

    <ScrollView
        android:id="@+id/sv_video_info_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >

            <!-- 标题 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:id="@+id/video_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#373737"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout style="@style/video_info_background_linearlayout_style" />

            <!-- 缩略图和 up主 -->

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/video_thumb"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/loading_image_ing" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/video_thumb" >

                    <TextView
                        android:id="@+id/video_username"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:textColor="#373737"
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout style="@style/video_info_background_linearlayout_style" />

            <!-- 视频简介 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    style="@style/video_info_background_text_style"
                    android:text="@string/video_description" />

                <LinearLayout style="@style/video_info_background_linearlayout_style" />

                <TextView
                    android:id="@+id/video_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#373737" />
            </LinearLayout>

            <!-- TAG -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    style="@style/video_info_background_text_style"
                    android:text="@string/video_TAG" />

                <LinearLayout style="@style/video_info_background_linearlayout_style" />

                <TextView
                    android:id="@+id/video_TAG"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#373737" />
            </LinearLayout>
            <!-- 内容 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    style="@style/video_info_background_text_style"
                    android:text="@string/video_content" />

                <LinearLayout style="@style/video_info_background_linearlayout_style" />

                <Button
                    android:id="@+id/video_info_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <!-- 内容 -->
    <!-- 返回按钮 暂未添加 没有图片 -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <include layout="@layout/all_progressbar" />

        <LinearLayout
            android:id="@+id/ll_video_info_source"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:visibility="gone" >

            <Button
                android:id="@+id/video_info_button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/video_button_back" />

            <TextView
                style="@style/video_info_background_text_style"
                android:text="@string/video_content" />

            <LinearLayout
                style="@style/video_info_background_linearlayout_style"
                android:layout_width="match_parent" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/video_info_lv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:cacheColorHint="#00000000"
                    android:clickable="true"
                    android:divider="#ebebed"
                    android:dividerHeight="1dp"
                    android:drawSelectorOnTop="false"
                    android:fastScrollEnabled="true"
                    android:focusable="true" >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>